tweaks to pft script
removed some extraneous code, added call to rastervis, fixed issues with prediction visualization

--- a/PFT.Rmd
+++ b/PFT.Rmd
@@ -6,6 +6,7 @@ output: html_notebook
 ```{r}
 library(tidyverse)
 library(raster)
+library(rasterVis)
 library(mgcv)
 library(RStoolbox)
 ```
@@ -44,7 +45,9 @@ cold.desert.shrub <- (gdd0 >= 100)
 ```{r}
 potveg <- brick(c(tropical.evergreen, tropical.raingreen, warm.temperate.evergreen, temperate.summergreen, cool.temperate.conifer, boreal.evergreen.conifer, boreal.summergreen, succulent, warm.grass.shrub, cool.grass.shrub, cold.grass.shrub, hot.desert.shrub, cold.desert.shrub))
 
-rasterVis::levelplot(potveg)
+rm(tropical.evergreen, tropical.raingreen, warm.temperate.evergreen, temperate.summergreen, cool.temperate.conifer, boreal.evergreen.conifer, boreal.summergreen, succulent, warm.grass.shrub, cool.grass.shrub, cold.grass.shrub, hot.desert.shrub, cold.desert.shrub)
+
+levelplot(potveg)
 ```
 
 
@@ -120,13 +123,6 @@ names(preds) <- c('PC1', 'PC2', 'PC3', 'PC4', 'gdd', 'alpha', 'pet', 'ph', 'carb
 dat <- cbind(biomes, raster::extract(preds, biomes[,1:2], na.rm = T))
 ```
 
-Lets fit a series of one-to-many logistic regresstions with select=TRUE to select candidate models for each megabiome.
-```{r}
-library(parallel)
-cl <- makeCluster(2)
-
-
-```
 
 
 Confirming that the 4 pcas are the best, if we add 4 more pcas, they are penalized to 0.
@@ -186,23 +182,11 @@ Now use prentice variables.
 ```{r}
 preds2 <- brick(c(alpha, gdd5, t_cold, t_warm))
 names(preds2) <- c('alpha', 'gdd5', 't_cold', 't_warm')
+
 dat2 <- cbind(biomes, raster::extract(preds2, biomes[,1:2], na.rm = T)) %>%
   mutate(megabiome = if_else((megabiome == 'temperate forest' & gdd5 <= 900 & gdd5 >= 350), 'boreal forest', megabiome)) %>%
   mutate(megabiome = if_else((megabiome == 'temperate forest' | megabiome == 'boreal forest') & gdd5 < 350, 'tundra', megabiome)) %>%
   mutate(biome = as.factor(biome), megabiome = as.factor(megabiome), megabiome.int = as.numeric(megabiome) - 1)
-
-test<- dat2 %>% filter(megabiome == 'temperate forest' & gdd5 <= 900 & gdd5 >= 350)
-test <- dat2 %>% filter((megabiome == 'temperate forest' | megabiome == 'boreal forest') & gdd5 < 350)
-ggplot(test, aes(Lon, Lat)) +
-  borders("world", colour="gray50", fill="gray50") +
-  geom_point(aes(color = megabiome)) +
-  coord_fixed() +
-  theme_void()
-
-ggplot(test, aes(x = megabiome, fill = megabiome)) +
-  geom_bar()
-
-
 
 
 mod2 <- gam(list(megabiome.int 
@@ -216,6 +200,7 @@ mod2 <- gam(list(megabiome.int
                  ~ s(alpha, bs = 'cr') + s(gdd5, bs = 'cr') + s(t_cold, bs = 'cr') + s(t_warm, bs = 'cr')), family = multinom(K = 8), method = 'REML', select = F, data = dat2, optimizer = 'perf')
 
 saveRDS(mod2, 'mod2')
+mod2 <- readRDS('mod2')
 
 mod2
 summary(mod2)
@@ -223,16 +208,15 @@ plot(mod2)
 
 predictions <- predict(preds2, mod2, type = 'response', index = 1:9)
 names(predictions) <- dat2$megabiome %>% levels
-rasterVis::levelplot(predictions)
+levelplot(predictions)
 
-levelplot(gdd5)
-biome.preds <- which.max(predictions)# %>% ratify
-rasterVis::gplot(biome.preds) + geom_tile(aes(fill = as.factor(value))) + coord_fixed()
-rasterVis::gplot(predictions[[1]]) + geom_tile(aes(fill = value)) + coord_fixed()
+biome.preds <- which.max(predictions) %>% as.data.frame(na.rm = T, xy = T)
 
-
-residuals(mod2)
-
+ggplot(biome.preds, aes(x, y)) + 
+  geom_tile(aes(fill = as.factor(layer))) + 
+  scale_fill_brewer(palette = 'Paired') + 
+  theme_void() + 
+  coord_fixed()
 ```
 
 
